--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,6 +100,9 @@ en:
         destroy:
           success: "Delete successful!"
           danger: "Delete fail!"
+        update:
+          success: "Update successful!"
+          danger: "Update fails, please try again!"
       request:
         create:
           success: "Send request successful!"
@@ -125,6 +128,8 @@ en:
       save: "Save"
     index:
       title: "All book"
+    edit:
+      title: "Edit"
   action:
     title: "Action"
     edit: "Edit"
