--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -164,3 +164,7 @@ en:
     success: "successful!"
     danger: "fail!"
     save: "Save"
+    title: "reviews"
+  times:
+    posted: "Posted"
+    ago: "ago."
