--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -168,3 +168,9 @@ en:
   times:
     posted: "Posted"
     ago: "ago."
+  comments:
+    comment: "Comment"
+    your_comment: "Your comment..."
+    success: "Successful!"
+    danger: "Fail!"
+    save: "Save"
