edit and delete comment

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -149,6 +149,9 @@ en:
     edit: "Edit"
     delete: "Delete"
     confirm: "Are you sure?"
+    save: "Save"
+    success: "Successful!"
+    danger: "Fail!"
   marks:
     allread: "All read books"
     reading: "Reading"
@@ -176,3 +179,6 @@ en:
     success: "Successful!"
     danger: "Fail!"
     save: "Save"
+  image:
+    picture: "default_book.png"
+    avatar: "default_avatar.png"
