Show activity in homepage 2

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -193,3 +193,4 @@ en:
     markfav: " mark new favorite "
     writereview: " write new review in "
     writecmt: " write new comment in "
+    title: "Activity"
